force-app/main/default/objects/Opportunity/fields/Agency__c.field-meta.xml
<CustomField>
    <fullName>Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Media agency buying on behalf of the advertiser account.</description>
    <label>Agency</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Agency Opportunities</relationshipLabel>
    <relationshipName>Agency_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>