force-app/main/default/objects/Opportunity/fields/Channels__c.field-meta.xml
<CustomField>
    <fullName>Channels__c</fullName>
    <description>Audio and media channels included in the buy.</description>
    <label>Channels</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Podcast</fullName>
            </value>
            <value>
                <fullName>Streaming Audio</fullName>
            </value>
            <value>
                <fullName>Satellite Radio</fullName>
            </value>
            <value>
                <fullName>Live Events</fullName>
            </value>
            <value>
                <fullName>Display and Video</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>