force-app/main/default/objects/Opportunity/fields/Content_Categories__c.field-meta.xml
<CustomField>
    <fullName>Content_Categories__c</fullName>
    <description>Content genres the advertiser wants to run against.</description>
    <label>Content Categories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sports</fullName>
            </value>
            <value>
                <fullName>Comedy</fullName>
            </value>
            <value>
                <fullName>News</fullName>
            </value>
            <value>
                <fullName>Music</fullName>
            </value>
            <value>
                <fullName>Talk</fullName>
            </value>
            <value>
                <fullName>True Crime</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Lifestyle</fullName>
            </value>
            <value>
                <fullName>Kids and Family</fullName>
            </value>
            <value>
                <fullName>Spanish Language</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>