force-app/main/default/objects/Opportunity/fields/Flight_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Flight_End_Date__c</fullName>
    <description>Last day the campaign runs, as requested in the RFP.</description>
    <label>Flight End Date</label>
    <type>Date</type>
</CustomField>