force-app/main/default/objects/Opportunity/fields/Flight_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Flight_Start_Date__c</fullName>
    <description>First day the campaign runs, as requested in the RFP.</description>
    <label>Flight Start Date</label>
    <type>Date</type>
</CustomField>