force-app/main/default/objects/Opportunity/fields/Gross_Budget__c.field-meta.xml
<CustomField>
    <fullName>Gross_Budget__c</fullName>
    <description>Gross media budget stated in the agency RFP.</description>
    <label>Gross Budget</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>