force-app/main/default/objects/Opportunity/fields/Impressions_Goal__c.field-meta.xml
<CustomField>
    <fullName>Impressions_Goal__c</fullName>
    <description>Total impressions the advertiser wants delivered.</description>
    <label>Impressions Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>