force-app/main/default/objects/Opportunity/fields/Primary_KPI__c.field-meta.xml
<CustomField>
    <fullName>Primary_KPI__c</fullName>
    <description>Main success metric the advertiser will judge the campaign on.</description>
    <label>Primary KPI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brand Awareness</fullName>
            </value>
            <value>
                <fullName>Reach and Frequency</fullName>
            </value>
            <value>
                <fullName>Consideration</fullName>
            </value>
            <value>
                <fullName>Direct Response</fullName>
            </value>
            <value>
                <fullName>Site Traffic</fullName>
            </value>
            <value>
                <fullName>App Installs</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>