force-app/main/default/objects/Opportunity/fields/RFP_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>RFP_Due_Date__c</fullName>
    <description>Date the agency needs the proposal back.</description>
    <label>RFP Due Date</label>
    <type>Date</type>
</CustomField>