force-app/main/default/objects/Opportunity/fields/RFP_Processed_On__c.field-meta.xml
<CustomField>
    <fullName>RFP_Processed_On__c</fullName>
    <description>When RFP Intake last applied extracted values to this opportunity.</description>
    <label>RFP Processed On</label>
    <type>DateTime</type>
</CustomField>