force-app/main/default/objects/Opportunity/fields/RFP_Summary__c.field-meta.xml
<CustomField>
    <fullName>RFP_Summary__c</fullName>
    <description>AI summary of the RFP, including special requirements and restrictions.</description>
    <label>RFP Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>