force-app/main/default/objects/Opportunity/fields/Target_CPM__c.field-meta.xml
<CustomField>
    <fullName>Target_CPM__c</fullName>
    <description>Cost per thousand impressions the agency is targeting.</description>
    <label>Target CPM</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>