force-app/main/default/objects/Opportunity/fields/Target_Demo__c.field-meta.xml
<CustomField>
    <fullName>Target_Demo__c</fullName>
    <description>Audience demographic requested in the RFP, e.g. Adults 25-54.</description>
    <label>Target Demo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>